# music-visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.txt  README.md
.github/workflows/: build.yml  cmake.yml
MusicVisualizer/: CMakeLists.txt
MusicVisualizer/src/: MusicVisualizer.cpp  MusicVisualizer.h
MusicVisualizer/src/Utils/: IRenderObject.h  Renderer.h
MusicVisualizer/src/Utils/Data/: Database.cpp  Database.h
MusicVisualizer/src/Utils/Math/: FourierTransforms.cpp  FourierTransforms.h  PolygonMath.cpp
MusicVisualizer/src/Utils/Rendering/: Renderer.cpp  Renderer.h
MusicVisualizer/src/Utils/Rendering/Objects/: BaseRenderObject.h  TestRenderObject.cpp  TestRenderObject.h  UpdateRateObject.h  VisualizerObject.cpp  VisualizerObject.h
MusicVisualizerTests/: CMakeLists.txt
MusicVisualizerTests/src/: MusicVisualizer.cpp
lib/: CMakeLists.txt
lib/glew/: CMakeLists.txt  cmake_install.cmake
src/: Application.cpp  CMakeLists.txt  MusicVisualizer.cpp  MusicVisualizer.h
src/MusicVisualizer/: MusicVisualizer.cpp  MusicVisualizer.h
src/MusicVisualizer/Utils/Data/: AudioCallbacks.cpp  AudioCallbacks.h  Database.cpp  Database.h  PortAudioHandler.cpp  PortAudioHandler.h  PortAudioStream.cpp  PortAudioStream.h  WindowCollection.cpp  WindowCollection.h
src/MusicVisualizer/Utils/Data/AudioHandling/: IAudioCallback.h  PortAudioHandler.cpp  PortAudioHandler.h  PortAudioStream.cpp  PortAudioStream.h
src/MusicVisualizer/Utils/Math/: FourierTransforms.cpp  FourierTransforms.h  PolygonMath.cpp  PolygonMath.h
src/MusicVisualizer/Utils/Rendering/: Renderer.cpp  Renderer.h
src/MusicVisualizer/Utils/Rendering/ContextCreation/: Context.cpp  Context.h  GLFWHandler.cpp  GLFWHandler.h
src/MusicVisualizer/Utils/Rendering/Objects/: BaseRenderObject.cpp  BaseRenderObject.h  DirectDataObject.cpp  DirectDataObject.h  IRenderObject.h  Vertex.h  VisualizerObject.cpp  VisualizerObject.h
src/Utils/Data/: Database.cpp
src/Utils/Math/: FourierTransforms.cpp  FourierTransforms.h
src/Utils/Rendering/Objects/: BaseRenderObject.h  IRenderObject.h  VisualizerObject.cpp
tests/: CMakeLists.txt  Test.cpp
tests/MusicVisualizer/: LoggerMock.h  MusicVisualizerTests.cpp
tests/MusicVisualizer/Utils/Data/: CallbacksMock.h  DatabaseMock.h  DatabaseTests.cpp  PortAudioHandlerTests.cpp
tests/MusicVisualizer/Utils/Rendering/: RendererTest.cpp
tests/MusicVisualizer/Utils/Rendering/ContextCreation/: GLFWHandlerTests.cpp
tests/MusicVisualizer/Utils/Rendering/Objects/: IRenderObjectMock.cpp  IRenderObjectMock.h
